# aimoes_v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cli/: CMakeLists.txt
cli/src/: main.cpp
cli/tests/: CMakeLists.txt  CliIntegrationTests.cpp  CppTestHelpers.h  PathConfig.h.in
cli/tests/inputs/simple/: test_input.aosl
cli/tests/simple/: main.cpp  messages.aosl
compiler/: CMakeLists.txt
compiler/include/ao/schema/: Adapter.h  Assembler.h  Ast.h  AstBaseType.h  AstValidate.h  AstValueLiteral.h  Codec.h  CodecCommon.h  CompilerContext.h  CppAdapter.h  CppBackend.h  DiskCodec.h  Error.h  Frontend.h  IR.h  JSONBackend.h  NetCodec.h  Parser.h  ResourceCache.h  SemanticContext.h  Serializer.h  VM.h  VMPrettyPrint.h
compiler/include/ao/utils/: Array.h  Blake3Hasher.h  Overloaded.h  Span.h  Variant.h
compiler/src/: Assembler.cpp  Ast.cpp  AstBaseType.cpp  AstValidateIds.cpp  AstValidateIds.h  AstValidateTypeProperties.cpp  AstValidateTypeProperties.h  Codec.cpp  CodecCommon.cpp  CompilerContext.cpp  ComputeDirectives.cpp  ComputeDirectives.h  ComputeNormalizedTypeParameters.cpp  ComputeNormalizedTypeParameters.h  CppAdapter.cpp  CppArrayAccessor.cpp  CppBackend.cpp  CppBackendHelpers.cpp  CppBackendHelpers.h  CppBackendTypeAccessors.cpp  CppEnumAccessor.cpp  CppMessageAccessor.cpp  CppOneofAccessor.cpp  CppOptionalAccessor.cpp  CppScalarAccessor.cpp  CppTypeAccessor.cpp  CppTypeAccessor.h  DiskCodec.cpp  Error.cpp  IR.cpp  JSONBackend.cpp  NetCodec.cpp  Parser.cpp  SemanticContext.cpp  Serializer.cpp  VM.cpp  VMPrettyPrint.cpp
compiler/tests/: AssemblerTests.cpp  AstQueries.cpp  AstQueries.h  AstTests.cpp  CodecHelpers.h  ComputeDirectiveTests.cpp  CppBackendTests.cpp  DiskCodecTests.cpp  Helpers.cpp  Helpers.h  IRFileSerializeTests.cpp  IRGenerateTests.cpp  IRSerializeTests.cpp  ImportTests.cpp  JSONBackendTests.cpp  JSONCodecTests.cpp  JSONDiskCodecTests.cpp  ParserTests.cpp  ResolveSymbolsOneOfTests.cpp  ResolveSymbolsTests.cpp  ValidateIdTests.cpp  ValidateModulesTests.cpp
idl/: CMakeLists.txt
idl/include/ao/idl/: AST.h  CompilationState.h  Parser.h
idl/src/: CompilationState.cpp
idl/tests/: main.cpp
journal/: CMakeLists.txt
journal/include/ao/journal/: Journal.h
journal/src/: Journal.cpp
journal/tests/: JournalTests.cpp
meta/: CMakeLists.txt
meta/include/ao/meta/: Function.h  IsShared.h  Reflect.h  TupleUtils.h  TypeList.h  Utils.h
pack/: CMakeLists.txt
pack/include/ao/pack/: BitStream.h  ByteStream.h  Disk.h  Error.h  HashingStream.h  IOByteStream.h  Network.h  OStreamWriteStream.h  Varint.h  ZigZag.h
pack/src/: BitStream.cpp  ByteStream.cpp
pack/tests/: BitStreamTests.cpp  ByteStreamTests.cpp  VarintTests.cpp  ZigZagTests.cpp
