add_library(compiler OBJECT
 "src/Ast.cpp"
 "src/SemanticContext.cpp"
 "src/AstValidateIds.h"
 "src/AstValidateIds.cpp"
 "src/ComputeDirectives.h"
 "src/ComputeDirectives.cpp"
 "src/IR.cpp"
 "include/ao/schema/IR.h"
 "include/ao/schema/ResourceCache.h"
 "include/ao/schema/Parser.h"
 "src/Parser.cpp"
 "include/ao/schema/AstBaseType.h"
 "include/ao/schema/AstValueLiteral.h"
 "src/AstBaseType.cpp"
 "src/AstValidateTypeProperties.h"
 "src/AstValidateTypeProperties.cpp"
 "include/ao/schema/CppBackend.h"
 "src/CppBackend.cpp"
 "include/ao/schema/Bytecode.h"
 "src/Bytecode.cpp"
 "include/ao/schema/VM.h"
 "src/VM.cpp"
 "include/ao/schema/Adapter.h"
 "include/ao/schema/Codec.h"
 "src/Codec.cpp"
 "include/ao/schema/JSONBackend.h"
 "src/JSONBackend.cpp"  "src/Error.cpp")
target_include_directories(compiler PUBLIC include)
target_link_libraries(compiler PUBLIC Boost::container_hash foonathan::lexy pack nlohmann_json)

add_executable(CompilerTests
 "tests/AstTests.cpp"
 "tests/ImportTests.cpp"
 "tests/ResolveSymbolsTests.cpp"
 "tests/ResolveSymbolsOneOfTests.cpp"
 "tests/Helpers.h"
 "tests/Helpers.cpp"
 "tests/ValidateIdTests.cpp"
 "tests/ComputeDirectiveTests.cpp"
 "tests/AstQueries.h"
 "tests/AstQueries.cpp"
 "tests/ParserTests.cpp"
 "tests/JSONBackendTests.cpp")
target_link_libraries(CompilerTests PRIVATE compiler Catch2::Catch2WithMain)
