add_library(compiler OBJECT
 "src/Ast.cpp"
 "src/SemanticContext.cpp"
 "src/AstValidateIds.h"
 "src/AstValidateIds.cpp"
 "src/ComputeDirectives.h"
 "src/ComputeDirectives.cpp"
 "src/IR.cpp"
 "include/ao/schema/IR.h"
 "include/ao/schema/ResourceCache.h"
 "include/ao/schema/Parser.h"
 "src/Parser.cpp"
 "include/ao/schema/AstBaseType.h"
 "src/AstBaseType.cpp"
 "include/ao/schema/AstValueLiteral.h"
 "src/AstBaseType.cpp"
 "src/AstValidateTypeProperties.h"
 "src/AstValidateTypeProperties.cpp"
 "include/ao/schema/CppBackend.h"
 "src/CppBackend.cpp"
 "include/ao/schema/Bytecode.h"
 "src/Bytecode.cpp"
 "include/ao/schema/VM.h"
 "src/VM.cpp"
 "include/ao/schema/Adapter.h"
 "include/ao/schema/NetCodec.h"
 "include/ao/schema/DiskCodec.h"
 "include/ao/schema/Codec.h"
 "src/NetCodec.cpp"
 "src/DiskCodec.cpp"
 "include/ao/schema/JSONBackend.h"
 "src/JSONBackend.cpp"
 "src/Error.cpp"
 "include/ao/schema/Assembler.h"
 "src/Assembler.cpp"
 "include/ao/schema/VMPrettyPrint.h"
 "src/VMPrettyPrint.cpp"
 "include/ao/schema/CodecCommon.h"
 "src/CodecCommon.cpp"
 "include/ao/schema/CppAdapter.h"
 "include/ao/utils/Array.h"
 "include/ao/schema/Serializer.h"
 "src/Serializer.cpp"
 "include/ao/utils/Span.h"
 "include/ao/utils/Variant.h"
 "include/ao/utils/Blake3Hasher.h"
 "src/CppAdapter.cpp"
)
target_include_directories(compiler PUBLIC include)
target_link_libraries(compiler PUBLIC
	Boost::container_hash
	foonathan::lexy
	pack
	meta
	$<TARGET_OBJECTS:pack>
	nlohmann_json
	BLAKE3::blake3)

add_executable(CompilerTests
 "tests/AstTests.cpp"
 "tests/ImportTests.cpp"
 "tests/ResolveSymbolsTests.cpp"
 "tests/ResolveSymbolsOneOfTests.cpp"
 "tests/Helpers.h"
 "tests/Helpers.cpp"
 "tests/ValidateIdTests.cpp"
 "tests/ComputeDirectiveTests.cpp"
 "tests/AstQueries.h"
 "tests/AstQueries.cpp"
 "tests/ParserTests.cpp"
 "tests/JSONBackendTests.cpp"
 "tests/IRGenerateTests.cpp"
 "tests/AssemblerTests.cpp"
 "tests/JSONCodecTests.cpp"
 "tests/CodecHelpers.h"
 "tests/DiskCodecTests.cpp"
 "tests/CppBackendTests.cpp"
 "tests/IRSerializeTests.cpp"
 "tests/IRFileSerializeTests.cpp"
)
 target_link_libraries(CompilerTests PRIVATE compiler Catch2::Catch2WithMain)
